# Motif

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  cli.md  prompt-design-zh.md  prompt-design.md  session.md  tools.md
docs/core/: agent.md  error.md  history.md  hooks.md  prompt.md  provider.md  tool.md  types.md
docs/superpowers/plans/: 2026-06-17-motif-core.md
docs/superpowers/specs/: 2026-06-17-v0.2-design.md  2026-06-19-test-suite-design.md
macros/: Cargo.toml
macros/src/: lib.rs
motif/: Cargo.toml
motif-cli/: Cargo.toml
motif-cli/src/: commands.rs  config.rs  hooks.rs  keybind.rs  lib.rs  main.rs
motif-cli/src/cmd/: clear.rs  config_cmd.rs  delete.rs  export.rs  help.rs  list.rs  load.rs  mod.rs  status.rs
motif-macros/: Cargo.toml
motif-macros/src/: lib.rs
motif-mcp/: Cargo.toml
motif-mcp/src/: lib.rs
motif-session/: Cargo.toml
motif-session/src/: lib.rs
motif-skill/: Cargo.toml
motif-skill/src/: lib.rs
motif-tests/: Cargo.toml  _write_modules.py
motif-tests/tests/: all_tests.rs  core_agent.rs
motif-tests/tests/common/: mod.rs
motif-tests/tests/modules/: cli_commands.rs  cli_config.rs  core_agent.rs  core_error.rs  core_hooks.rs  core_prompt.rs  core_types.rs  live_api.rs  macros_tool.rs  prompt_concurrent.rs  provider_retry.rs  provider_stream.rs  security_bash.rs  security_path.rs  security_quote.rs  security_ssrf.rs  stress_concurrent.rs  stress_io.rs  stress_long.rs  tools_bash.rs  tools_edit.rs  tools_read.rs  tools_read_state.rs  tools_search.rs  tools_web_fetch.rs  tools_write.rs
motif-tests/tests/motif-tests/tests/modules/: tools_bash.rs  tools_read.rs  tools_search.rs  tools_write.rs
motif-tools/: Cargo.toml
motif-tools/src/: bash.rs  edit.rs  lib.rs  read.rs  read_state.rs  search.rs  web_fetch.rs  write.rs
motif-tools/tests/: tool_tests.rs
motif-tui/: Cargo.toml
motif-tui/src/: app.rs  config.rs  event_loop.rs  input.rs  lib.rs  main.rs  render.rs  terminal.rs
motif-tui/tests/: tui_tests.rs
motif/src/: agent.rs  history.rs  hooks.rs  lib.rs  mod.rs  prompt.rs  provider.rs  tool.rs  types.rs
motif/tests/: integration.rs
src/: agent.rs  error.rs  history.rs  hooks.rs  lib.rs  main.rs  prompt.rs  provider.rs  tool.rs  types.rs
src/cli/: commands.rs  config.rs  keybind.rs  motif.rs
src/cli/cmd/: clear.rs  help.rs  list.rs  load.rs  status.rs
src/core/: agent.rs  history.rs  hooks.rs  prompt.rs  provider.rs  tool.rs
src/tools/: bash.rs  mod.rs  read.rs  search.rs  write.rs
tests/: integration.rs  tool_tests.rs
