[package]
name = "motif"
version = "0.1.0"
edition = "2021"
description = "Minimal, extensible Rust agent core"
license = "MIT"
keywords = ["agent", "llm", "ai", "tool-use"]
categories = ["development-tools", "web-programming"]
repository = "https://github.com/example/motif"
homepage = "https://github.com/example/motif"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
thiserror = "2"
futures = "0.3"
schemars = "1"
tracing = "0.1"
