[package]
name = "macros"
version = "0.2.0"
edition = "2021"
description = "Procedural macros for the Motif agent framework"
license = "MIT"
repository = "https://github.com/Cashmeran/Motif"
homepage = "https://github.com/Cashmeran/Motif"
documentation = "https://docs.rs/macros"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
