[package]
name = "motif-session"
version = "0.2.0"
edition = "2021"
description = "File-based session persistence for Motif"
license = "MIT"
repository = "https://github.com/Cashmeran/Motif"
homepage = "https://github.com/Cashmeran/Motif"
documentation = "https://docs.rs/motif-session"
readme = "../README.md"

[dependencies]
motif = { path = "../motif" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
