[package]
name = "motif-tui"
version = "0.3.0"
edition = "2021"
description = "Dual-panel TUI example for Motif agent"
license = "MIT"
repository = "https://github.com/Cashmeran/Motif"
publish = false

[[bin]]
name = "motif"
path = "src/main.rs"

[dependencies]
motif = { path = "../motif" }
motif-cli = { path = "../motif-cli" }
motif-tools = { path = "../motif-tools" }
motif-session = { path = "../motif-session" }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
futures-util = "0.3"

[dev-dependencies]
insta = "1"
